--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<div class="reveal">
 			<div class="slides">
 				<section>
-					<h1>GIT 101</h1>
+					<h1>Hello world</h1>
 				</section>
 				<!-- FIRST SECTION -->
 				<section>
